[gd_scene load_steps=33 format=3 uid="uid://c724ebh1g6x6t"]

[ext_resource type="PackedScene" uid="uid://cwardrwdox6yy" path="res://scenes/levels/level1.tscn" id="1_lv7x7"]
[ext_resource type="PackedScene" uid="uid://qwcrvpuwaybu" path="res://scenes/objects/gate.tscn" id="2_aq2ie"]
[ext_resource type="Texture2D" uid="uid://cumo1hk4kb0fy" path="res://resources/graphics/ground/stones.png" id="2_i5toh"]
[ext_resource type="Script" uid="uid://bgvsu7rckf5wg" path="res://scenes/levels/outside.gd" id="2_jfb8j"]
[ext_resource type="Texture2D" uid="uid://dbqstdamksa5i" path="res://resources/graphics/tilesets/outside_walls.png" id="3_nmlyl"]
[ext_resource type="Texture2D" uid="uid://n2uffyrlpejt" path="res://resources/graphics/tilesets/soil.png" id="4_rvi3b"]
[ext_resource type="Texture2D" uid="uid://ocku8mhwmire" path="res://resources/graphics/decals/dirt_patch.png" id="5_ipyfj"]
[ext_resource type="Texture2D" uid="uid://bagfoyiy8t7ls" path="res://resources/graphics/decals/moss/moss_1.png" id="6_5ipv0"]
[ext_resource type="Texture2D" uid="uid://b1difvhal1loo" path="res://resources/graphics/decals/moss/moss_5.png" id="7_1hyyl"]
[ext_resource type="Texture2D" uid="uid://d3oayo3ar1bhd" path="res://resources/graphics/decals/blood.png" id="8_n1t7a"]
[ext_resource type="Texture2D" uid="uid://cutgiv8vwrxbc" path="res://resources/graphics/decals/moss/moss_3.png" id="9_qe1le"]
[ext_resource type="PackedScene" uid="uid://ds8jbgbautvkn" path="res://scenes/objects/steamventtscn.tscn" id="10_rb7qm"]
[ext_resource type="PackedScene" uid="uid://dvhgl2pnfk26j" path="res://scenes/houses/house.tscn" id="11_liif1"]
[ext_resource type="PackedScene" uid="uid://dk0fgs72ne6bl" path="res://scenes/objects/light_fan_animation.tscn" id="12_jgx0p"]
[ext_resource type="PackedScene" uid="uid://ct52vcfrwnfd" path="res://scenes/items/item.tscn" id="15_biof2"]
[ext_resource type="PackedScene" uid="uid://kakwrt2f6e54" path="res://scenes/objects/toilet.tscn" id="17_vx71c"]
[ext_resource type="PackedScene" uid="uid://b376kdr6mwkcu" path="res://scenes/enemies/car.tscn" id="18_0j4ei"]
[ext_resource type="PackedScene" uid="uid://ddta3pu6y4jix" path="res://scenes/objects/box_2.tscn" id="19_1y0rk"]
[ext_resource type="PackedScene" uid="uid://b4aa2htnkoadh" path="res://scenes/enemies/bug.tscn" id="19_pyqr0"]
[ext_resource type="PackedScene" uid="uid://c0cr73ual42vd" path="res://scenes/enemies/scout.tscn" id="19_xxwgh"]
[ext_resource type="PackedScene" uid="uid://7y4yx3cpyo2k" path="res://scenes/enemies/drone.tscn" id="20_5dyq4"]
[ext_resource type="PackedScene" uid="uid://bu1lnxr3mo4ym" path="res://scenes/enemies/hunter.tscn" id="20_q12ej"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_raloh"]
resource_name = "wall"
texture = ExtResource("3_nmlyl")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-66.468, -65.7609, 54.3685, -65.8771, 54.7653, -59.5275, 195, -61.1062, 195, 57.0175, 53.7401, 55.8614, 54.4472, 62.9325, -70.0036, 63.6396)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -62.2254, 195, -61.1062, 195, 57.0175, -195, 57.0175)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(66.468, 65.7609, -54.3685, 65.8771, -54.7653, 59.5275, -195, 61.1062, -195, -57.0175, -53.7401, -55.8614, -54.4472, -62.9325, 70.0036, -63.6396)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(65.7609, -66.468, 65.8771, 54.3685, 59.5275, 54.7653, 61.1062, 195, -57.0175, 195, -55.8614, 53.7401, -62.9325, 54.4472, -63.6396, -70.0036)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62.3629, -60.5811, 195, -61.1062, 195, 57.0175, 62.3629, 57.0175, 58.7993, 195, -60.6129, 195, -58.7993, 58.7993, -62.8579, 59.4905)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(60.5811, -62.3629, 61.1062, 195, -57.0175, 195, -57.0175, 62.3629, -195, 58.7993, -195, -60.6129, -58.7993, -58.7993, -59.4905, -62.8579)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62.2254, 195, -61.1062, -195, 57.0175, -195, 57.0175, 195)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60.5811, 62.3629, -61.1062, -195, 57.0175, -195, 57.0175, -62.3629, 195, -58.7993, 195, 60.6129, 58.7993, 58.7993, 59.4905, 62.8579)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(62.3629, 60.5811, -195, 61.1062, -195, -57.0175, -62.3629, -57.0175, -58.7993, -195, 60.6129, -195, 58.7993, -58.7993, 62.8579, -59.4905)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65.7609, 66.468, -65.8771, -54.3685, -59.5275, -54.7653, -61.1062, -195, 57.0175, -195, 55.8614, -53.7401, 62.9325, -54.4472, 63.6396, 70.0036)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w85b6"]
texture = ExtResource("4_rvi3b")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_6xrti"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 31
sources/0 = SubResource("TileSetAtlasSource_raloh")
sources/1 = SubResource("TileSetAtlasSource_w85b6")

[sub_resource type="Curve2D" id="Curve2D_52nqc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -4009, 1207, -914.343, -965.14, 914.343, 965.14, -4739, 4026, -380.976, -882.595, 380.976, 882.595, -2745, 5550, -863.546, 914.343, 863.546, -914.343, 246, 4675, 266.683, 838.148, -266.683, -838.148, 506, 1721, 1123.88, 44.4472, -1123.88, -44.4472, -1970, 324, 0, 0, 0, 0, -4009, 1207)
}
point_count = 7

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwm5e"]
size = Vector2(376, 1504)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmrpd"]
size = Vector2(1969.73, 163)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34m2t"]
size = Vector2(8169, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nid1k"]
size = Vector2(10140, 137)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhkdf"]
size = Vector2(4465.22, 209.999)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_c0unh"]
vertices = PackedVector2Array(616, 61, 615, 61, 1370, 46, 993, 1160, -1420, 962, -1155, 180, 1199, 1134, 1028, 1136, 1397, 44, 1623, 59, 1663, 155, 1654, 1032, 1003, 1158, 998, 2761, 1403, 2079, 1667, 2098, 1687, 2307, 1268, 2311, 1171, 2241, 1713, 2304, 1692, 2097, 2371, 2075, 2571, 2306, 2529, 1064, 2349, 1897, 2294, 1034, -1364, 152, 2108, 1029, 1682, 1922, 1380, 1920, 666, 5230, 1536, 5210, 1536, 5822, -1027, 5825, 599, 5163, 1004, 3270, 1380, 3266, 1395, 5041, 655, 5038, -81, 3636, 2168, 3273, 2166, 4246, 1581, 4248, 1572, 3259, 1779, 3258, 1761, 2795, 1572, 3258, 1558, 3083, 1267, 2478, 1762, 2483, 1178, 2860, -1724, 4591, 617, 5062, 2110, 42, 2219, 40, 1002, 3091, 999, 2864)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(0, 2, 3, 4, 5), PackedInt32Array(6, 7, 8, 9, 10, 11), PackedInt32Array(3, 12, 13), PackedInt32Array(14, 15, 16, 17, 18), PackedInt32Array(19, 20, 21, 22), PackedInt32Array(23, 22, 21, 24, 25), PackedInt32Array(4, 26, 5), PackedInt32Array(11, 27, 25, 24, 28, 29, 6), PackedInt32Array(30, 31, 32, 33), PackedInt32Array(34, 30, 33), PackedInt32Array(35, 36, 37, 38, 39), PackedInt32Array(40, 41, 42, 43, 44), PackedInt32Array(45, 44, 43, 46), PackedInt32Array(45, 46, 47), PackedInt32Array(48, 49, 45, 47, 50), PackedInt32Array(34, 33, 51, 39, 52), PackedInt32Array(38, 52, 39), PackedInt32Array(27, 53, 54, 25), PackedInt32Array(18, 6, 29, 14), PackedInt32Array(50, 18, 17, 48), PackedInt32Array(50, 47, 55, 56), PackedInt32Array(55, 35, 39, 4, 56), PackedInt32Array(13, 56, 4), PackedInt32Array(3, 13, 4)])
outlines = Array[PackedVector2Array]([PackedVector2Array(1014, 1152, 1008, 2761, 1009.11, 2853.5, 1014, 3260, 1390, 3256, 1406, 5052, 658, 5048, 626, 5068, 610, 5160, 670, 5220, 1546, 5200, 1546, 5832, -1034, 5836, -1738, 4588, -94, 3632, -1431, 964, -1374, 141, -1155, 170, 615, 51, 1390, 36), PackedVector2Array(1168, 2850, 1009, 2854, 1012, 3101, 1549, 3093, 1562, 3259, 1572, 4259, 2176, 4256, 2179, 3264, 1789, 3248, 1771, 2795, 1773, 2474, 1277, 2468, 1278, 2321, 1699, 2317, 1677, 2089, 1412, 2070, 1392, 1930, 1682, 1932, 2340, 1907, 2360, 2065, 1681, 2088, 1704, 2314, 2582, 2317, 2539, 1056, 2303, 1025, 2229, 30, 2101, 33, 2098, 1019, 1664, 1022, 1674, 154, 1630, 50, 1385, 34, 1008, 1148, 1189, 1144, 1161, 2241)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Outside" instance=ExtResource("1_lv7x7")]
script = ExtResource("2_jfb8j")

[node name="Stones" type="Sprite2D" parent="ground" index="0"]
texture_repeat = 2
position = Vector2(-775, 1208)
texture = ExtResource("2_i5toh")
region_enabled = true
region_rect = Rect2(0, 0, 16000, 10000)
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="ground" index="1"]
position = Vector2(458, 243)
tile_set = SubResource("TileSet_6xrti")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(-9, 1, 2, -65545, 1, 1, -131081, 1, 1, -196617, 1, 1, -262153, 1, 1, -327689, 1, 1, -8, 65537, 2, -7, 65537, 2, -6, 65537, 2, -5, 65537, 2, -4, 65537, 2, -393225, 1, 0, -393224, 65537, 0, -393223, 65537, 0, -393222, 65537, 0, -393221, 65537, 0, -393220, 65537, 0, -393219, 65537, 0, -393218, 65537, 0, -393217, 65537, 0, -458752, 65537, 0, -458751, 65537, 0, -458750, 65537, 0, -458749, 65537, 0, -458748, 65537, 0, -458747, 65537, 0, -458746, 131073, 0, -393210, 131073, 1, -327674, 131073, 1, -262138, 131073, 1, -196602, 131073, 1, -131066, 131073, 1, -65530, 131073, 2, -65531, 65537, 2, -65532, 65537, 2, -196615, 65537, 1, -262151, 65537, 1, -327687, 65537, 1, -327688, 65537, 1, -262152, 65537, 1, -196616, 65537, 1, -131080, 65537, 1, -65544, 65537, 1, -65543, 65537, 1, -131079, 65537, 1, -131078, 65537, 1, -196614, 65537, 1, -262150, 65537, 1, -327686, 65537, 1, -327685, 65537, 1, -262149, 65537, 1, -196613, 65537, 1, -131077, 65537, 1, -65541, 65537, 1, -65542, 65537, 1, -65540, 65537, 1, -131076, 65537, 1, -196612, 65537, 1, -262148, 65537, 1, -327684, 65537, 1, -327683, 65537, 1, -262147, 65537, 1, -196611, 65537, 1, -131075, 65537, 1, -65539, 65537, 1, -3, 65537, 2, -2, 65537, 2, -65538, 65537, 1, -131074, 65537, 1, -196610, 65537, 1, -262146, 65537, 1, -327682, 65537, 1, -327681, 65537, 1, -262145, 65537, 1, -196609, 65537, 1, -131073, 65537, 1, -65537, 65537, 1, -1, 65537, 2, -65536, 65537, 2, -131072, 65537, 1, -196608, 65537, 1, -262144, 65537, 1, -327680, 65537, 1, -393216, 65537, 1, -393215, 65537, 1, -327679, 65537, 1, -262143, 65537, 1, -196607, 65537, 1, -131071, 65537, 1, -65535, 65537, 2, -65534, 65537, 1, -131070, 65537, 1, -196606, 65537, 1, -262142, 65537, 1, -327678, 65537, 1, -393214, 65537, 1, -393213, 65537, 1, -327677, 65537, 1, -262141, 65537, 1, -196605, 65537, 1, -131069, 65537, 1, -65533, 65537, 1, -131068, 65537, 1, -196604, 65537, 1, -262140, 65537, 1, -327676, 65537, 1, -393212, 65537, 1, -393211, 65537, 1, -327675, 65537, 1, -262139, 65537, 1, -196603, 65537, 1, -131067, 65537, 1, 393219, 65536, 1, 458755, 65536, 2, 393220, 65536, 0, 393221, 65536, 0, 393222, 65536, 0, 393223, 131072, 2, 327687, 0, 2, 262151, 0, 2, 458756, 131072, 1, 524292, 0, 2, 589828, 0, 2, 655363, 65536, 1, 655364, 131072, 2, 720899, 65536, 2, 720900, 131072, 1, 720902, 65536, 0, 720903, 131072, 2, 589831, 65536, 2, 524295, 0, 2, 458759, 65536, 1, 655367, 65536, 1, 458760, 131072, 2, 393224, 0, 2, 327688, 0, 2, 262152, 65536, 1, 196615, 65536, 1, 196616, 65536, 0, 196617, 65536, 0, 196618, 65536, 0, 196619, 65536, 0, 262153, 131072, 1, 327689, 0, 2, 393225, 0, 2, 458761, 0, 2, 589832, 131072, 2, 524296, 65536, 1, 524297, 131072, 2, 655369, 65536, 0, 655368, 65536, 0, 655370, 131072, 1, 720906, 0, 2, 786442, 65536, 2, 786443, 65536, 0, 720908, 0, 2, 786444, 131072, 2, 655372, 0, 2, 589836, 0, 2, 524300, 0, 2, 458764, 0, 2, 393228, 0, 2, 327692, 65536, 1, 524298, 0, 0, 524299, 131072, 0, 589835, 131072, 0, 589833, 0, 0, 589834, 65536, 0, 327690, 0, 2, 393226, 0, 2, 262154, 0, 1, 458762, 0, 3, 196620, 131072, 2, 131084, 0, 1, 327693, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 131072, 1, 7, 0, 0, 65547, 131072, 2, 65546, 65536, 0, 65545, 65536, 0, 65544, 65536, 0, 65543, 65536, 0, 65542, 65536, 1, 131078, 0, 2, 196614, 0, 2, 262150, 0, 2, 327686, 0, 3, 131081, 65536, 0, 131080, 65536, 0, 131079, 0, 0, 131082, 131072, 0, 327681, 0, 2, 131073, 0, 1, 393217, 0, 3, 524293, 0, 0, 524294, 131072, 1, 655366, 131072, 2, 655365, 0, 0, 589830, 0, 2, 786434, 131072, 2, 720898, 0, 2, 655362, 0, 2, 589826, 0, 2, 524290, 0, 2, 458754, 131072, 1, 458753, 0, 0, 196609, 0, 2, 262145, 0, 2, 262146, 0, 0, 262147, 65536, 0, 262148, 131072, 0, 196597, 65537, 1, 262134, 65537, 1, 327670, 65537, 1, 393207, 65537, 1, 458743, 65537, 1, 458744, 65537, 1, 524280, 65537, 1, 524281, 65537, 1, 589817, 65537, 1, 458745, 65537, 1, 393209, 65537, 1, 327672, 65537, 1, 262135, 65537, 1, 196599, 65537, 1, 196600, 65537, 1, 196601, 65537, 1, 196602, 65537, 1, 262137, 65537, 1, 262136, 65537, 1, 196598, 65537, 1, 196596, 65537, 1, 196603, 65537, 1, 196604, 65537, 1, 262132, 65537, 1, 327668, 65537, 1, 393204, 65537, 1, 458740, 65537, 1, 524276, 65537, 1, 589812, 65537, 1, 655348, 65537, 1, 720884, 65537, 1, 786420, 65537, 1, 851956, 65537, 1, 262133, 65537, 1, 327669, 65537, 1, 393205, 65537, 1, 458741, 65537, 1, 524277, 65537, 1, 589813, 65537, 1, 655349, 65537, 1, 720885, 65537, 1, 786421, 65537, 1, 851957, 65537, 1, 393206, 65537, 1, 458742, 65537, 1, 524278, 65537, 1, 589814, 65537, 1, 655350, 65537, 1, 720886, 65537, 1, 786422, 65537, 1, 851958, 65537, 1, 327671, 65537, 1, 524279, 65537, 1, 589815, 65537, 1, 655351, 65537, 1, 720887, 65537, 1, 786423, 65537, 1, 851959, 65537, 1, 393208, 65537, 1, 589816, 65537, 1, 655352, 65537, 1, 720888, 65537, 1, 786424, 65537, 1, 851960, 65537, 1, 327673, 65537, 1, 655353, 65537, 1, 720889, 65537, 1, 786425, 65537, 1, 851961, 65537, 1, 262138, 65537, 1, 327674, 65537, 1, 393210, 65537, 1, 458746, 65537, 1, 524282, 65537, 1, 589818, 65537, 1, 655354, 65537, 1, 720890, 65537, 1, 786426, 65537, 1, 851962, 65537, 1, 262139, 65537, 1, 327675, 65537, 1, 393211, 65537, 1, 458747, 65537, 1, 524283, 65537, 1, 589819, 65537, 1, 655355, 65537, 1, 720891, 65537, 1, 786427, 65537, 1, 851963, 65537, 1, 262140, 65537, 1, 327676, 65537, 1, 393212, 65537, 1, 458748, 65537, 1, 524284, 65537, 1, 589820, 65537, 1, 655356, 65537, 1, 720892, 65537, 1, 786428, 65537, 1, 851964, 65537, 1, 196605, 65537, 1, 262141, 65537, 1, 327677, 65537, 1, 393213, 65537, 1, 458749, 65537, 1, 524285, 65537, 1, 589821, 65537, 1, 655357, 65537, 1, 720893, 65537, 1, 786429, 65537, 1, 851965, 65537, 1, 196606, 65537, 1, 262142, 65537, 1, 327678, 65537, 1, 393214, 65537, 1, 458750, 65537, 1, 524286, 65537, 1, 589822, 65537, 1, 655358, 65537, 1, 720894, 65537, 1, 786430, 65537, 1, 851966, 65537, 1, 196607, 131073, 1, 262143, 131073, 1, 327679, 131073, 1, 393215, 131073, 1, 458751, 131073, 1, 524287, 131073, 1, 589823, 131073, 1, 655359, 131073, 1, 720895, 131073, 1, 786431, 131073, 1, 851967, 131073, 1, 917503, 131073, 2, 917492, 65537, 2, 917493, 65537, 2, 917494, 65537, 2, 917495, 65537, 2, 917496, 65537, 2, 917497, 65537, 2, 917498, 65537, 2, 917499, 65537, 2, 917500, 65537, 2, 917501, 65537, 2, 917502, 65537, 2, 917491, 1, 2, 851955, 1, 1, 196595, 1, 1, 262131, 1, 1, 327667, 1, 1, 393203, 1, 1, 458739, 1, 1, 524275, 1, 1, 589811, 1, 1, 655347, 1, 1, 720883, 1, 1, 786419, 1, 1, 131059, 1, 0, 131071, 131073, 0, 131060, 65537, 0, 131061, 65537, 0, 131062, 65537, 0, 131063, 65537, 0, 131064, 65537, 0, 131065, 65537, 0, 131066, 65537, 0, 131067, 65537, 0, 131068, 65537, 0, 131069, 65537, 0, 131070, 65537, 0, 720901, 65536, 1, 786436, 0, 2, 851972, 131072, 2, 786437, 0, 2, 851973, 0, 2, 917509, 131072, 2, 917506, 65536, 0, 917507, 65536, 0, 917508, 65536, 0, 327694, 65536, 0, 327695, 65536, 0, 327696, 65536, 0, 327697, 65536, 0, 327698, 65536, 0)
layer_1/name = "walls"
layer_1/tile_data = PackedInt32Array(-5, 131072, 0, -65531, 0, 0, -6, 65536, 0, -7, 65536, 0, -8, 65536, 0, -9, 65536, 2, -65545, 0, 2, -131081, 0, 2, -196617, 0, 2, -262153, 0, 2, -327689, 0, 2, -393225, 65536, 1, -393224, 65536, 0, -393223, 65536, 0, -393222, 65536, 0, -393221, 65536, 0, -393220, 65536, 0, -393219, 65536, 0, -393218, 65536, 0, -393217, 65536, 0, -458752, 65536, 0, -458751, 65536, 0, -458750, 65536, 0, -458749, 65536, 0, -458748, 65536, 0, -458747, 65536, 0, -458746, 131072, 1, -393210, 0, 2, -327674, 0, 2, -262138, 0, 2, -196602, 0, 2, -131066, 0, 2, -65530, 131072, 2, 327685, 131072, 2, 262149, 0, 2, 196613, 0, 2, 131077, 0, 2, 327684, 65536, 0, 327683, 65536, 0, 327682, 65536, 0)

[node name="DirtPatch" type="Sprite2D" parent="ground" index="2"]
modulate = Color(0.72549, 0.858824, 0.741176, 0.929412)
position = Vector2(-1854, -1243)
texture = ExtResource("5_ipyfj")

[node name="Moss1" type="Sprite2D" parent="ground" index="3"]
position = Vector2(2864, 158)
texture = ExtResource("6_5ipv0")

[node name="Moss5" type="Sprite2D" parent="ground" index="4"]
position = Vector2(-2633, 17)
rotation = 1.0472
texture = ExtResource("7_1hyyl")

[node name="Blood" type="Sprite2D" parent="ground" index="5"]
position = Vector2(-1245, -255)
texture = ExtResource("8_n1t7a")

[node name="Moss3" type="Sprite2D" parent="ground" index="6"]
position = Vector2(-2773, -39)
texture = ExtResource("9_qe1le")

[node name="SteamVent" parent="ground" index="7" instance=ExtResource("10_rb7qm")]
position = Vector2(-2025, -171)

[node name="SteamVent2" parent="ground" index="8" instance=ExtResource("10_rb7qm")]
position = Vector2(-2264, -158)

[node name="SteamVent3" parent="ground" index="9" instance=ExtResource("10_rb7qm")]
position = Vector2(-2500, -163)

[node name="House" parent="ground" index="10" instance=ExtResource("11_liif1")]
position = Vector2(-2038, 3094)
rotation = -2.09439
scale = Vector2(0.75, 0.75)

[node name="LightFanAnimation" parent="ground" index="11" instance=ExtResource("12_jgx0p")]
position = Vector2(-1613, 2494)
metadata/_edit_lock_ = true

[node name="Box5" parent="ground" index="12" instance=ExtResource("19_1y0rk")]
position = Vector2(2410, 566)

[node name="Box8" parent="ground" index="13" instance=ExtResource("19_1y0rk")]
position = Vector2(-1808, 4265)
rotation = 2.61799

[node name="Box9" parent="ground" index="14" instance=ExtResource("19_1y0rk")]
position = Vector2(-1358, 4001)
rotation = 2.61799

[node name="Box10" parent="ground" index="15" instance=ExtResource("19_1y0rk")]
position = Vector2(-903, 3742)
rotation = 2.61799

[node name="Item" parent="ground" index="16" instance=ExtResource("15_biof2")]
position = Vector2(-337, 105)
rotation = -0.261799

[node name="Item2" parent="ground" index="17" instance=ExtResource("15_biof2")]
position = Vector2(-496, 108)
rotation = -0.261799

[node name="Item3" parent="ground" index="18" instance=ExtResource("15_biof2")]
position = Vector2(-653, 106)
rotation = -0.261799

[node name="Item4" parent="ground" index="19" instance=ExtResource("15_biof2")]
position = Vector2(-810, 107)
rotation = -0.261799

[node name="Toilet" parent="ground" index="20" instance=ExtResource("17_vx71c")]
position = Vector2(-2402, 2563)
rotation = -2.09439

[node name="Toilet" parent="ground/Toilet" index="4" instance=ExtResource("17_vx71c")]
position = Vector2(-128.397, 4.39009)

[node name="Gate" parent="." index="3" instance=ExtResource("2_aq2ie")]
position = Vector2(425, -244)
metadata/_edit_lock_ = true

[node name="player" parent="." index="7"]
position = Vector2(2768, 480)

[node name="Scout" parent="Enemies" index="0" instance=ExtResource("19_xxwgh")]
position = Vector2(2004, 2986)
rotation = -1.57079

[node name="Bug" parent="Enemies" index="1" instance=ExtResource("19_pyqr0")]
position = Vector2(-1168, 2432)

[node name="Hunter" parent="Enemies" index="2" instance=ExtResource("20_q12ej")]
position = Vector2(1903, 4025)
collision_mask = 13

[node name="Bug2" parent="Enemies" index="3" instance=ExtResource("19_pyqr0")]
position = Vector2(-1562, 2115)

[node name="Bug3" parent="Enemies" index="4" instance=ExtResource("19_pyqr0")]
position = Vector2(-1320, 2187)

[node name="Bug4" parent="Enemies" index="5" instance=ExtResource("19_pyqr0")]
position = Vector2(-1320, 2016)

[node name="Bug5" parent="Enemies" index="6" instance=ExtResource("19_pyqr0")]
position = Vector2(-1423, 2452)

[node name="Bug6" parent="Enemies" index="7" instance=ExtResource("19_pyqr0")]
position = Vector2(-1127, 2685)

[node name="Drone2" parent="Enemies" index="8" instance=ExtResource("20_5dyq4")]
position = Vector2(6692, -2701)
rotation = -0.523598

[node name="Scout2" parent="Enemies" index="9" instance=ExtResource("19_xxwgh")]
position = Vector2(-1809, 2326)
rotation = -2.09439
scale = Vector2(0.75, 0.75)

[node name="Bug8" parent="Enemies" index="10" instance=ExtResource("19_pyqr0")]
position = Vector2(-1249, 3566)

[node name="Bug11" parent="Enemies" index="11" instance=ExtResource("19_pyqr0")]
position = Vector2(-2308, 3727)

[node name="Bug9" parent="Enemies" index="12" instance=ExtResource("19_pyqr0")]
position = Vector2(-2066, 3422)

[node name="Bug10" parent="Enemies" index="13" instance=ExtResource("19_pyqr0")]
position = Vector2(-1926, 3767)

[node name="Bug7" parent="Enemies" index="14" instance=ExtResource("19_pyqr0")]
position = Vector2(-2447, 3385)

[node name="Scout3" parent="Enemies" index="15" instance=ExtResource("19_xxwgh")]
position = Vector2(-2196, 466)

[node name="CarPath" type="Path2D" parent="." index="10"]
position = Vector2(-112, 146)
curve = SubResource("Curve2D_52nqc")

[node name="car" parent="CarPath" index="0" instance=ExtResource("18_0j4ei")]
position = Vector2(799.926, 3174.55)
rotation = -1.5875
progress = 10874.5

[node name="LevelBarriers" type="Node2D" parent="." index="11"]

[node name="StaticBody2D" type="StaticBody2D" parent="LevelBarriers" index="0"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D" index="0"]
position = Vector2(-2900, 813)
shape = SubResource("RectangleShape2D_jwm5e")

[node name="StaticBody2D2" type="StaticBody2D" parent="LevelBarriers" index="1"]
collision_layer = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D2" index="0"]
position = Vector2(-1398.66, 5477.34)
rotation = 1.0472
shape = SubResource("RectangleShape2D_hmrpd")

[node name="StaticBody2D3" type="StaticBody2D" parent="LevelBarriers" index="2"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D3" index="0"]
position = Vector2(3145.5, 6186)
shape = SubResource("RectangleShape2D_34m2t")

[node name="StaticBody2D4" type="StaticBody2D" parent="LevelBarriers" index="3"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D4" index="0"]
position = Vector2(7190.99, 1093)
rotation = 1.57079
shape = SubResource("RectangleShape2D_nid1k")

[node name="StaticBody2D5" type="StaticBody2D" parent="LevelBarriers" index="4"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarriers/StaticBody2D5" index="0"]
position = Vector2(5075.74, -2896.72)
rotation = -0.261799
shape = SubResource("RectangleShape2D_dhkdf")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." index="12"]
position = Vector2(-53, -8)
navigation_polygon = SubResource("NavigationPolygon_c0unh")

[connection signal="player_departed" from="ground/House" to="." method="_on_house_player_departed"]
[connection signal="player_entered" from="ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
